--- a/recipe-page/style.css
+++ b/recipe-page/style.css
@@ -28,8 +28,6 @@ body{
     justify-content: center;
     align-items: center;
     flex: 1;
-    width: 100vw;
-    min-height: 100vh;
 }
 
 .main{
